[package]
name = "lists"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
shuffle = ["rand"]

[dependencies]
minivec = { path = "../minivec" }
rand = { version = "0.8.5", optional = true }
[dev-dependencies]
rand = "0.8.5"


